--- a/fileUpload/fileUpload/fileUpload.csproj
+++ b/fileUpload/fileUpload/fileUpload.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.core" Version="3.7.2.2" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.1.22" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
